unpackaged/main/default/objects/SLCA2__TestObject__c/fields/SLCA2__BooleanField__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__BooleanField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BooleanField</label>
    <type>Checkbox</type>
</CustomField>