unpackaged/main/default/objects/SLCA2__TestObject__c/fields/SLCA2__CurrencyField__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__CurrencyField__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>CurrencyField</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>