unpackaged/main/default/objects/SLCA2__TestObject__c/fields/SLCA2__DateField__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__DateField__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>DateField</label>
    <type>Date</type>
</CustomField>