unpackaged/main/default/objects/SLCA2__TestObject__c/fields/SLCA2__DateTimeField__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__DateTimeField__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>DateTimeField</label>
    <type>DateTime</type>
</CustomField>