unpackaged/main/default/objects/SLCA2__TestObject__c/fields/SLCA2__End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__End_Date_Time__c</fullName>
    <label>End Date Time</label>
    <type>DateTime</type>
</CustomField>