unpackaged/main/default/objects/SLCA2__TestObject__c/fields/SLCA2__MultiSelectField__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__MultiSelectField__c</fullName>
    <label>MultiSelectField</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>