unpackaged/main/default/objects/SLCA2__TestObject__c/fields/SLCA2__PicklistField__c.field-meta.xml
<CustomField>
    <fullName>SLCA2__PicklistField__c</fullName>
    <label>PicklistField</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <color>#0B6FCE</color>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <color>#78C953</color>
                <label>2</label>
            </value>
            <value>
                <fullName>3</fullName>
                <color>#E27001</color>
                <label>3</label>
            </value>
            <value>
                <fullName>4</fullName>
                <color>#A845DC</color>
                <label>4</label>
            </value>
            <value>
                <fullName>5</fullName>
                <color>#F3D904</color>
                <label>5</label>
            </value>
            <value>
                <fullName>Dreamforce Booth Schedule</fullName>
                <color>#A53711</color>
                <label>Dreamforce Booth Schedule</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>